# morph-engine

./: README.md  main.py  main_2d.py  main_3d.py  pyproject.toml
docs/: architecture  project_structure_diagram.py
src/core/: game_object.py  tick.py
src/core/render/: window.py
src/tests/: game_objects.py
